[project]
name = "fairmss"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inequalipy>=1.0.5",
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "psutil>=7.2.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "wandb>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "beta", "cmdp"]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (unused imports, undefined names, etc.)
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modernize syntax for target Python version)
    "B",   # flake8-bugbear (common bug patterns)
    "SIM", # flake8-simplify (simplifiable code)
]
ignore = [
    "E501", # line too long — handled by ruff format instead
]

[tool.ruff.lint.isort]
known-first-party = ["common", "beta", "cmdp"]
